# oc-js

./: .editorconfig  .gitignore  Gruntfile.js  README.md  build.gradle  circle.yml  native.sh  package.json
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  DuktapeEngine.cpp  DuktapeEngineNative.cpp  DuktapeEngineNative.h  JSValue.cpp  JSValue.hpp  SpiderMonkeyEngine.cpp  SpiderMonkeyEngineNative.cpp  SpiderMonkeyEngineNative.h  V8Engine.cpp  V8EngineNative.cpp  V8EngineNative.h  test_main.cpp
native/include/: duk_config.h  js-confdefs.h  js-config.h
native/src/: JSEngine.hpp  JSValue.cpp  JSValue.hpp  test_main.cpp
native/src/duktape/: DuktapeEngine.cpp  DuktapeEngineNative.cpp  DuktapeEngineNative.h
native/src/spidermonkey/: SpiderMonkeyEngine.cpp  SpiderMonkeyEngineNative.cpp  SpiderMonkeyEngineNative.h
os.js/bios/: bios.ts  biosDefinitions.ts  bootloader.ts  text-encoding.d.ts  tsconfig.json
os.js/os/: kernel.ts  tsconfig.json
os.js/os/usr/kernel/: require.ts
os.js/os/usr/lib/: bios.d.ts  externalComponents.d.ts  fs.ts  kernel.d.ts  os.ts  path.ts  term.ts  text-encoding.d.ts
os.js/simulator/: bios.js  bootloader.js  copyOS.sh  package.json  start-ts.ts  start.js  tsconfig.json  watch.sh
os.js/simulator/src/: OCComponent.ts  OCSandbox.ts  biosDefinitions.ts  main.ts
os.js/simulator/src/components/: EEPROMComponent.ts  FilesystemComponent.ts
src/main/cpp/: DuktapeEngine.cpp  test.cpp
src/main/headers/: com_pwootage_oc_js_DuktapeEngine.h
src/main/java/com/pwootage/oc/js/: ComponentInvoker.kt  JSArchitectureBase.kt  JSEngine.kt  JSUtils.kt  JSValue.kt  NashornArchitecture.scala  NashornExecutionThread.scala  OCJS.kt  OCJSApi.scala  OCNashorn.scala  OCSignalHandler.kt  StaticJSSrc.kt
src/main/java/com/pwootage/oc/js/api/: JSBiosInternalAPI.kt  JSComponentApi.kt  JSComponentApi.scala  JSComputerApi.kt  JSConsoleDebugApi.scala  JSExitException.kt
src/main/java/com/pwootage/oc/js/duktape/: DuktapeArchitecture.kt  DuktapeEngine.kt  DuktapeStatic.kt
src/main/java/com/pwootage/oc/js/spidermonkey/: SpiderMonkeyArchitecture.kt  SpiderMonkeyEngine.kt  SpiderMonkeyStatic.kt
src/main/resources/: mcmod.info
src/main/resources/assets/oc-js/: encode-decode-shim.min.js
src/main/resources/assets/oc-js/bios/: bios.js  bootloader.js
src/main/resources/assets/oc-js/os/: kernel.js
src/main/resources/assets/oc-js/os/usr/kernel/: fs.js  require.js
src/main/scala/com/pwootage/oc/js/: AsyncMethodCaller.scala  ComponentInvoker.scala  DuktapeArchitecture.scala  DuktapeEngine.scala  JSArchitectureBase.scala  JSEngine.scala  JSUtils.scala  NashornArchitecture.scala  NashornExecutionThread.scala  OCJS.scala  OCSignalHandler.scala  StaticJSSrc.scala  SyncMethodCaller.scala
src/main/scala/com/pwootage/oc/js/api/: JSBiosDebugApi.scala  JSBiosInternalAPI.scala  JSComponentApi.scala  JSComputerApi.scala  JSException.scala  JSExitException.scala
src/main/scala/com/pwootage/oc/js/duktape/: DuktapeArchitecture.scala  DuktapeEngine.scala  DuktapeStatic.java
src/main/scala/com/pwootage/oc/js/jsvalue/: JSValue.scala
src/main/scala/com/pwootage/oc/js/nashorn/: NashornArchitecture.scala  NashornExecutionThread.scala
src/main/scala/com/pwootage/oc/js/spidermonkey/: SpiderMonkeyArchitecture.scala  SpiderMonkeyEngine.scala  SpiderMonkeyStatic.java
src/main/scala/com/pwootage/oc/js/v8/: V8Architecture.scala  V8Engine.scala  V8ExecutionContext.java  V8Static.java
src/main/ts/: tsconfig.json
src/main/ts/bios/: Bios.d.ts  bios.d.ts  bios.ts  bootloader.ts  tsconfig.json
src/main/ts/components/: ComponentBase.d.ts  Components.d.ts  EEPROMComponent.d.ts  FilesystemComponent.d.ts  GPUComponent.d.ts  ScreenComponent.d.ts  component.d.ts
src/main/ts/os/: kernel.ts  tsconfig.json
src/main/ts/os/usr/kernel/: fs.ts  kernel.d.ts  require.ts
src/main/ts/os/usr/lib/: bios.d.ts  component.ts  event.ts  externalComponents.d.ts  fs.ts  kernel.d.ts  os.ts  path.ts  term.ts
